<resources>
    <string name="app_name">CalculatorBinHex</string>
    <string name="number_2">number 2:</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="and">and</string>
    <string name="or">or</string>
    <string name="xor">xor</string>
    <string name="not">not</string>
    <string name="sh_l">sh-l</string>
    <string name="sh_r">sh-r</string>
    <string name="bin">bin</string>
    <string name="dec">dec</string>
    <string name="hex">hex</string>
    <string name="number_1">number 1:</string>
    <string name="a">A</string>
    <string name="e">E</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="f">F</string>
    <string name="d">D</string>
    <string name="number_2_or_value_for_sh_r_l">number 2 or value for sh-r/l</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
    <string name="clear">Clear</string>
    <string name="open_main_screen">Open main screen</string>
    <string name="ieee_754_floating_point_converter">IEEE-754 Floating Point Converter</string>
    <string name="ieee_converter_todo">IEEE Converter (TODO)</string>
    <string-array name="bits">
        <item>8bits</item>
        <item>16bits</item>
        <item>32bits</item>
    </string-array>
    <string-array name="spinner">
        <item>Hamming</item>
        <item>Gray</item>
        <item>Parity</item>
    </string-array>

<!--    <string name="app_name">IEEE-754 Converter</string>-->

    <string name="hello_world">Hello world!</string>
    <string name="about">About</string>
    <string name="enter_number">Enter a decimal number (e.g. 100, 1.4)</string>
    <string name="x32">32-bit</string>
    <string name="x64">64-bit</string>

    <string name="breakdown">Breakdown</string>
    <string name="sign">Sign</string>
    <string name="exponent">Exponent</string>
    <string name="mantissa">Mantissa</string>

    <string name="representation">Representation</string>
    <string name="binary">Binary</string>
    <string name="decimal">Decimal</string>

    <string name="about_message">&#169; 2020 </string>
    <string name="ok">Coolbeans</string>
    <string name="ieee_754_floating_point_converter_v2">IEEE-754 Floating Point Converter v2</string>
    <string name="gray">Gray</string>
    <string name="hamming_parity">Hamming/Parity</string>
    <string name="input_hex_value">input hex value</string>
    <string name="parity">Parity</string>
    <string name="gray_input">Gray to bin input</string>
    <string name="crc">CRC</string>
    <string name="little_endian">Little Endian</string>
    <string name="big_endian">Big Endian</string>
</resources>

