<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="407dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/num_sys_select"
        android:layout_width="69dp"
        android:layout_height="142dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_bin"
            android:layout_width="57dp"
            android:layout_height="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:onClick="onNumeralSelection"
            android:text="@string/bin" />

        <RadioButton
            android:id="@+id/radio_dec"
            android:layout_width="57dp"
            android:layout_height="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="28dp"
            android:onClick="onNumeralSelection"
            android:text="@string/dec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radio_hex"
            android:layout_width="57dp"
            android:layout_height="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="28dp"
            android:onClick="onNumeralSelection"
            android:text="@string/hex"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/operator"
        android:layout_width="74dp"
        android:layout_height="218dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/and"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOperatorSelect"
            android:text="@string/and" />

        <RadioButton
            android:id="@+id/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOperatorSelect"
            android:text="@string/or" />

        <RadioButton
            android:id="@+id/xor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOperatorSelect"
            android:text="@string/xor" />

        <RadioButton
            android:id="@+id/not"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOperatorSelect"
            android:text="@string/not" />

        <RadioButton
            android:id="@+id/sh-l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOperatorSelect"
            android:text="@string/sh_l" />

        <RadioButton
            android:id="@+id/sh-r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOperatorSelect"
            android:text="@string/sh_r" />

    </RadioGroup>

    <EditText
        android:id="@+id/input_number_1"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="75dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/number_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="75dp"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="80dp"
        android:text="@string/number_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_number_2"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/number_2_or_value_for_sh_r_l"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="247dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="148dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button16"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="536dp"
            android:onClick="onSymbolButtonClick"
            android:text="@string/a"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219" />


        <Button
            android:id="@+id/button17"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="536dp"
            android:onClick="onSymbolButtonClick"
            android:text="@string/b"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219" />

        <Button
            android:id="@+id/button18"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="536dp"
            android:onClick="onSymbolButtonClick"
            android:text="@string/c"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219" />


        <Button
            android:id="@+id/button21"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="184dp"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="536dp"
            android:onClick="onSymbolButtonClick"
            android:text="@string/f"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219" />

        <Button
            android:id="@+id/button19"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="536dp"
            android:onClick="onSymbolButtonClick"
            android:text="@string/d"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219" />

        <Button
            android:id="@+id/button20"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="144dp"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="536dp"
            android:onClick="onSymbolButtonClick"
            android:text="@string/e"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/reset_btn"
        android:layout_width="68dp"
        android:layout_height="35dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="216dp"
        android:onClick="onResetClick"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="172dp"
        android:onClick="onCalculate"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--<Spinner
        android:id="@+id/bit_select_spinner"
        android:layout_width="141dp"
        android:layout_height="30dp"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="20dp"
        android:entries="@array/bits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <EditText
        android:id="@+id/result_input"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="272dp"
        android:ems="10"
        android:hint="@string/result"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="372dp"
        android:text="bin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="416dp"
        android:text="dec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/convertBin"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="363dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/convertDec"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="407dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="460dp"
        android:layout_marginBottom="252dp"
        android:text="@string/hex"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/convertHex"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="456dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/convertBinDecHex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="60dp"
        android:onClick="onConvertBinDecHexClick"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearBinDecHex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="60dp"
        android:onClick="onClearBinDecHex"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>